Fix bug #24712: SHOW TABLE STATUS for file-per-table showing incorrect time fields